# WEBSCRAP

./: exAMPLE.TXT  model_struct.py  pyproject.toml  webGETs.py
